--- a/test/regressions/debug.html
+++ b/test/regressions/debug.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <title>vrtest</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1" />
-    <style>body { background-color: white; }</style>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1"
+    />
+    <style>
+      body {
+        background-color: white;
+      }
+    </style>
   </head>
   <body>
     <script src="../../tmp/tests.js"></script>
